# url-text-fetcher

./: LICENSE  README.md  pyproject.toml
url_text_fetcher/: mcp_server.py
